# AyMdD_2026-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-quarto.yml
Tarea 2/dataset/: data_dictionary.md  desapariciones.ipynb  tarea2.ipynb
Tarea 2/dataset/.ipynb_checkpoints/: tarea2-checkpoint.ipynb
Tarea 2/presentation/: presentation.html  presentation.qmd  presentation.quarto_ipynb  presentation.quarto_ipynb_1  presentation.quarto_ipynb_2  presentation.quarto_ipynb_3  presentation.quarto_ipynb_4  presentation.quarto_ipynb_5  presentation.quarto_ipynb_6  presentation.quarto_ipynb_7  presentation.quarto_ipynb_8  presentation.quarto_ipynb_9  styles.css
Tarea 2/reporte/: main.tex
Tarea 2/reporte/contenido/: reporte.tex
Tarea 2/reporte/estructura/: estilo.tex  packages.tex  portada.tex
Tarea 3/: Tarea3.ipynb  datos_apriori_manual.csv  datos_manual_final.csv  datos_mlxtend.csv  datos_mlxtend_final.csv  secretariado.ipynb
Tarea 3/dataset/: datos_apriori_manual.csv  datos_manual_final.csv  datos_mlxtend.csv  datos_mlxtend_final.csv  secretariado.ipynb
Tarea 3/datasets/: datos_apriori_manual.csv  datos_manual_final.csv  datos_mlxtend.csv  datos_mlxtend_final.csv
Tarea 3/presentation/: presentation.qmd
Tarea 3/reporte/: dump.tex
Tarea 3/reporte/contenido/: clasificacion.tex  interpretaciones.tex  reporte.tex
Tarea 3/reporte/estructura/: estilo.tex  packages.tex  (+1 more)
Tarea 3/scripts/: apriori.py
Tarea2/: README.md  requirements.txt
Tarea2/dataset/: tarea2.ipynb
presentation/: presentation.qmd  styles.css
