[project]
name = "aymd-2026-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib==3.10.8",
    "nbformat>=5.10.4",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "scikit-learn==1.8",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "tabulate>=0.10.0",
]
